# mango

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  LICENSE  Makefile.am  NEWS  README  TODO.org  configure.ac
doc/: Doxyfile  Makefile  make.bat
doc/source/: about.rst  api.rst  build-products.rst  build-source-linux.rst  build-source-osx.rst  build-source-windows.rst  building-from-source.rst  camera-and-view-python.rst  conf.py  constants.rst  core.rst  docs.rst  download.rst  draw.rst  faq.rst  frames-python.rst  getting-started-python.rst  index.rst  input-python.rst  license.rst  mangoincpp.rst  mangoinpython.rst  rendering-python.rst  samples.rst  setup.rst  tips-and-tricks-python.rst
doc/source/_templates/: layout.html
doc/source/cpp/: api-mango-core-base_camera.rst  api-mango-core-core_camera.rst  api-mango-core-core_engine.rst  api-mango-core-core_mouse.rst  (+32 more)
geometry/: CMakeLists.txt  makefile
geometry/include/: geometry.h
geometry/src/: geometry.cpp
include/mango/: mango.h
installers/osx/: Info.plist  makefile  osx-link-mango.sh
installers/win/: PathManipulation.nsh  fileassoc.nsh  installer.warsetup  makefile  mango-setup.nsi
mango/: makefile
mango/imports/: cxxtest
mango/include/: mango.h
mango/src/: mango.cpp
mango_on_glut/: imports.txt  makefile
mango_on_glut/imports/: geometry  mango
mango_on_glut/include/: mango_on_glut.h
mango_on_glut/sample/: #hello_coordinate_system.cpp#  hello_box.cpp  hello_coordinate_system.cpp  hello_earth_sun.cpp  hello_transform_to_from_ancestor.cpp  hello_transform_to_from_parent.cpp
mango_on_glut/src/: mango_glut.h  mango_on_glut.cpp  mango_on_glut.h
mangopy/: imports.txt  makefile
mangopy/include/: mangopy.h  mangopy_camera.h  mangopy_core.h  mangopy_core_module.h  mangopy_drawing.h  mangopy_error.h  mangopy_frame.h  mangopy_input_event.h  mangopy_keyboard.h  mangopy_matrix.h  mangopy_mouse.h  mangopy_opengl.h  mangopy_pyengine.h  mangopy_pyengine_wrapper.h  mangopy_python.h  mangopy_triangle.h  mangopy_vector.h
mangopy/src/: mangopy.c  mangopy.cpp  mangopy.h  mangopy_camera.cpp  mangopy_camera.h  mangopy_core.cpp  mangopy_core.h  mangopy_core_module.cpp  mangopy_core_module.h  mangopy_draw.cpp  mangopy_draw.h  mangopy_drawing.cpp  mangopy_drawing.h  mangopy_frame.cpp  mangopy_frame.h  mangopy_input_event.cpp  mangopy_input_event.h  mangopy_keyboard.cpp  mangopy_keyboard.h  mangopy_matrix.cpp  mangopy_matrix.h  mangopy_mouse.cpp  mangopy_mouse.h  mangopy_opengl.cpp  mangopy_opengl.h  mangopy_pyengine.cpp  mangopy_pyengine.h  mangopy_pyengine_wrapper.cpp  mangopy_python.h  mangopy_triangle.cpp  mangopy_triangle.h  mangopy_vector.cpp  mangopy_vector.h
mangopy_on_glut/: imports.txt  makefile
mangopy_on_glut/demo/: demo.py
mangopy_on_glut/imports/: mango  mango_on_glut  mangopy  python
mangopy_on_glut/sample/: angles.py  animated_hand.py  binary_stars.py  bouncing_ball_pausable.py  bouncing_ball_relative.py  colorful_lines.py  coordinate_system.py  fireworks1.py  function_grapher.py  geometry_models.py  graph_random.py  hand.py  handimp.py  handlib.py  hello_box.py  hello_geometry.py  hello_tree.py  imp.py  input_printer.py  oscillating_hand.py  profusion_of_balls.py  radial_exp_surface.py  rotating_box.py  tree.py  triangle.py
mangopy_on_glut/src/: mangopy_on_glut.cpp
mangopy_on_glut/stam/: camera_coord.py  dots.py  forest.py  llcs.py  main.py  matrix1.py  tree.py
pygeometry/: imports.txt  makefile
pygeometry/include/: pygeometry_arrow.h  pygeometry_box.h  pygeometry_circle.h  pygeometry_colorful_object.h  pygeometry_coordinate_system.h  pygeometry_cylinder.h  pygeometry_ngon.h  pygeometry_rectangle.h  pygeometry_shell.h  pygeometry_vertex_array.h
pygeometry/src/: pygeometry.cpp  pygeometry.h  pygeometry_arrow.cpp  pygeometry_box.cpp  pygeometry_circle.cpp  pygeometry_circle.h  pygeometry_colorful_object.cpp  pygeometry_colorful_object.h  pygeometry_coordinate_system.cpp  pygeometry_coordinate_system.h  pygeometry_cylinder.cpp  pygeometry_ngon.cpp  pygeometry_ngon.h  pygeometry_rectangle.cpp  pygeometry_rectangle.h  pygeometry_shell.cpp  pygeometry_shell.h  pygeometry_sphere.cpp  pygeometry_sphere.h  pygeometry_vertex_array.cpp  pygeometry_vertex_array.h
sample/: hello_geometry.cpp  hello_mango_on_glut.cpp
samples/: CMakeLists.txt  hello_arrow.cpp  hello_bouncing_ball.cpp  hello_box.cpp  hello_coordinate_system.cpp  hello_earth_sun.cpp  hello_geometry.cpp  hello_input_events.cpp  hello_mango_on_glut.cpp  hello_transform_to_from_ancestor.cpp  hello_transform_to_from_parent.cpp
samples_mangopy/mangopy/: bouncing_ball.py  demo.py  forest.py  labeled_axes.py  profusion_of_spheres.py
samples_mangopy/solids/: pytetrahedron.cpp  pytetrahedron.h  tetrahedron.h
src/: CMakeLists.txt  mango.cpp
src/core/: core.cpp  error.cpp  frame.cpp  input.cpp  triangle.cpp  utils.cpp
src/draw/: draw.cpp  raw_character_data.cpp
src/draw/raw_faces/: b.raw  c.raw  ca.raw  cc.raw  cd.raw  cf.raw  cg.raw  ch.raw  cn.raw  cr.raw  ct.raw  cw.raw  cx.raw  cy.raw  cz.raw  d.raw  g.raw  i.raw  j.raw  m.raw  n1.raw  n2.raw  n4.raw  n6.raw  o.raw  q.raw  raw.py  s.raw  s_ampersand.raw  s_at.raw  s_backtick.raw  s_bar.raw  s_close_paren.raw  s_colon.raw  s_double_quotes.raw  s_equals.raw  s_hash.raw  s_lessthan.raw  s_open_curly_paren.raw  s_open_paren.raw  (+9 more)
src/geometry/: geometry.cpp
src/glut/: mango_on_glut.cpp
src/mangopy/: mangopy.cpp  mangopy_camera.cpp  mangopy_core.cpp  mangopy_core_module.cpp  mangopy_draw.cpp  mangopy_drawing.cpp  mangopy_frame.cpp  mangopy_input_event.cpp  mangopy_keyboard.cpp  mangopy_matrix.cpp  mangopy_mouse.cpp  mangopy_opengl.cpp  mangopy_pyengine.cpp  mangopy_pyengine_wrapper.cpp  mangopy_triangle.cpp  mangopy_vector.cpp
src/mangopy_on_glut/: mangopy_on_glut.cpp
src/pygeometry/: pygeometry.cpp  pygeometry_arrow.cpp  pygeometry_box.cpp  pygeometry_circle.cpp  pygeometry_colorful_object.cpp  pygeometry_coordinate_system.cpp  pygeometry_cylinder.cpp  pygeometry_ngon.cpp  pygeometry_rectangle.cpp  pygeometry_shell.cpp  pygeometry_sphere.cpp  pygeometry_vertex_array.cpp
(+186 files in other folders)
